fix for white space beneath footer

--- a/style/css/custom.css
+++ b/style/css/custom.css
@@ -126,7 +126,7 @@ body{height: 200%;
 }
 
 #landing{
-    height: 50%;
+    height: 51%;
     position:relative;
 }
 
